--- a/info_gather.yaml
+++ b/info_gather.yaml
@@ -81,3 +81,7 @@ bel_params:
 planner_params:
   max_time: 5.0
   max_observations: 1
+  max_time_wo_replan: 100
+  way_point_loc_acc: 0.15
+  way_point_ang_acc: 0.09
+  way_point_direction_angle: 0.04
